Fix horizontal message overflow

--- a/frontend/src/components/MessagePage/style.module.scss
+++ b/frontend/src/components/MessagePage/style.module.scss
@@ -5,7 +5,8 @@
     margin: 0 4rem;
     display: flex;
     flex-direction: column;
-    width: 100%;
+    flex: 1 1 auto;
+    overflow: auto;
     gap: 20px;
 }
 
